# qwencode-aiciv-mind

./: .current_session  .gitignore  .mcp.json  AGENT-REGISTRY.md  AGENTS.md  BATTLE-TEST-REPORT.md  CLAUDE.md  Cargo.toml  FOR_ACG_COREY.md  GRAND-PLAN.md  HANDOFF-RESTART.md  HANDOFF.md  LOAD-CONTEXT.sh  MISSION.md  MISSIONS.md  NAMING-CEREMONY.md  QWEN-STATUS-REPORT.md  QWEN.md  SOUL.md  TODO.md  UPDATE-FOR-ACG-AND-Mind-Cubed.md  VERIFICATION.md  challenger_warnings_analysis.txt  civsubstrate-synthesis.md  cortex-llm-health-check.txt  cortex_test.txt  crate_names.txt  dream_evidence.txt  evolution_evidence.txt  evolution_full_evidence.txt  fibonacci.sh  final_crate_test_counts.txt  gemma4-test-results.md  generate_image.sh  github_profile.json  handoff-2026-04-05.md  hermes-exploration-memo.md  hub-poster-output.md  hub_citizen_evidence.txt  hub_standup_evidence_20260415.txt  (+18 more)
.qwen/: AGENTS.md  README.md  SOUL.md
agents/: primary.agents.md
aiciv-mind-python/: DESIGN.md  FORK-ANALYSIS.md  battle_test_runner.py  build_hierarchy.py  delegation_chain.py  docs_vs_db.py  dream_autoresearch.py  grand_challenge.py  grand_plan.py  hengshi-tg-config.json  hengshi_telegram.py  mind_system.py  qwen-tg-config.json  qwen_checkins.py  qwen_interactive.py  qwen_mind.py  qwen_telegram.py  simplemem.py  simplemem.py.bak  spawn_mind.py  talk_to_acg.py
boop-deliveries/: mom-am-2026-04-15.md
config/: config.toml  hooks.json  tg_ledger.json
docs/: ARCHITECTURE-PROPOSAL.md  BUILD-PLAN.md  CHILD-DEMO-ASSUMPTION-FINDING.md  CHILDREN-DEMO.md  CODEX-IPC-PORTING-GUIDE.md  CORTEX-BUILD-SPEC.md  CORTEX-FEATURES-RESEARCH.md  COUNTDOWN-BLOG-PIPELINE.md  DRIVELOOP-CHALLENGER-CORTEX-DESIGN.md  EVOLUTION-ADAPTATION-CORTEX.md  GEMMA4-INTEGRATION-GUIDE.md  M2.7-BEST-PRACTICES.md  NAMING-CEREMONY.md  NEXT-PUSH-PLAN.md  OVERNIGHT-FIX-REPORT.md  OVERNIGHT-MISSIONS.md  PORTAL-AS-NATIVE-INTERFACE.md  PRIOR-ART-AUDIT.md  SELF-UNDERSTANDING.md  SUB-MIND-PATTERN.md  TOOL-CALLING-IMPROVEMENTS.md  WHAT-IS-CORTEX.md
fork-template/: README.md
from-ACG/: search_redirect.py  telegram_unified.py
from-ACG-inbox/: 20260409-124554-message.json  20260409-125721-message.json  20260409-125952-message.json  20260409-130711-message.json  20260409-130750-message.json  20260409-133728-message.json  20260409-134207-message.json  20260409-141207-message.json  20260409-144332-message.json  20260409-145220-message.json  20260409-152226-message.json  20260409-155231-message.json  20260409-160209-message.json  20260409-162236-message.json  20260409-165241-message.json  20260409-172246-message.json  20260409-182044-message.json  20260409-185048-message.json  20260409-192052-message.json  20260409-195055-message.json  20260409-202059-message.json  20260409-205103-message.json  20260409-212106-message.json
memories/: compute-hibernation-state.json
patches/: 001-agent-control.patch  002-run-turn.patch  003-sandbox-bridge.patch  004-memory-dual-write.patch
spawned-minds/: synthesis.md
src/aiciv-auth/: Cargo.toml
src/aiciv-auth/src/: lib.rs  storage.rs  types.rs
src/aiciv-auth/src/providers/: api_key.rs  mod.rs
src/aiciv-hooks/: Cargo.toml
src/aiciv-hooks/src/: config.rs  dispatcher.rs  handler.rs  lib.rs  types.rs
src/aiciv-hooks/tests/: behavioral.rs
src/aiciv-hooks/tests/scripts/: approver.sh  blocker.sh  safety_checker.sh
src/aiciv-mcp/: Cargo.toml  FIRING_CONTRACT.md  SKILL.md
src/aiciv-mcp/src/: lib.rs  main.rs  tools.rs
src/aiciv-mcp/tests/: e2e_test.py  tests.rs
src/aiciv-tui/: Cargo.toml
src/aiciv-tui/src/: app.rs  lib.rs  main.rs  markdown.rs  sanitize.rs  ui.rs
src/codex-coordination/: Cargo.toml
src/codex-coordination/src/: coordinator.rs  input_mux.rs  lib.rs  mind_manager.rs  planning.rs  process_bridge.rs  task_ledger.rs  triggers.rs  types.rs
src/codex-dream/: Cargo.toml
src/codex-dream/src/: engine.rs  lib.rs
src/codex-drive/: Cargo.toml
src/codex-drive/src/: drive_loop.rs  event_bus.rs  lib.rs  task_store.rs
src/codex-exec/: Cargo.toml
src/codex-exec/src/: lib.rs  registry.rs  sandbox.rs
src/codex-exec/src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  web_fetch.rs  web_search.rs  write.rs
src/codex-exec/tests/: edit_behavioral.rs
src/codex-fitness/: Cargo.toml
src/codex-fitness/src/: lib.rs
src/codex-ipc/: Cargo.toml
src/codex-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs  transport.rs
src/codex-llm/: Cargo.toml
src/codex-llm/src/: lib.rs  ollama.rs  prompt.rs  provider.rs  rate_limiter.rs  think_loop.rs
src/codex-llm/tests/: llm_provider_behavioral.rs
src/codex-memory/: Cargo.toml
src/codex-memory/migrations/: 001_init.sql  002_sessions.sql
src/codex-memory/src/: lib.rs  store.rs  types.rs
src/codex-patcher/: Cargo.toml
src/codex-patcher/src/: agent_control_patch.rs  lib.rs  memory_dual_write.rs  patch_set.rs  qwen_interceptor.rs  sandbox_bridge.rs  session_patch.rs
src/codex-redteam/: Cargo.toml
src/codex-redteam/src/: lib.rs
src/codex-suite-client/: Cargo.toml
src/codex-suite-client/src/: elevenlabs_interceptor.rs  hub_interceptor.rs  image_gen_interceptor.rs  lib.rs  search_interceptor.rs
src/codex-transfer/: Cargo.toml
src/codex-transfer/src/: lib.rs
src/codex-types/: Cargo.toml
src/codex-types/src/: lib.rs
src/cortex/: Cargo.toml  build.rs
src/cortex-monitoring/: Cargo.toml
src/cortex-monitoring/src/: anomaly.rs  collector.rs  export.rs  lib.rs  metrics.rs
src/cortex/src/: boot.rs  config.rs  drive.rs  input_route.rs  main.rs  monitoring.rs  progress.rs  qwen_delegate.rs  task_history.rs
src/qwen-mind/: Cargo.toml
src/qwen-mind/src/: delegation.rs  fitness.rs  identity.rs  lib.rs  llm.rs  memory.rs  mind.rs  planning.rs  scratchpad.rs  spawner.rs
test-evolution/: identity.json
test-evolution-full/: identity.json
tools/: agentmail_send.py  chat_with_cortex.py  compute_cir.py  cortex  cortex-watchdog.sh  gemma4_agent.py  gemma4_loops.py  hub_standup_post.py  keptvoices_audio_server.py  keptvoices_audio_server_test.py  keptvoices_chat_server.py  keptvoices_chat_server_test.py  send_to_civ.sh  (+4 more)
(+789 files in other folders)
