[package]
name = "aiciv-auth"
description = "Provider authentication — composable auth providers for LLM APIs, MCP servers, and external services"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
