[package]
name = "aiciv-hooks"
description = "Runtime lifecycle hook engine — event dispatch, external command hooks, pre/post tool-use blocking"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codex-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
