[package]
name = "aiciv-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal terminal chat UI for aiciv-mind — ratatui + crossterm + ThinkLoop"

[[bin]]
name = "aiciv-tui"
path = "src/main.rs"

[lib]
name = "aiciv_tui"
path = "src/lib.rs"

[dependencies]
# Internal crates
codex-llm = { workspace = true }
codex-exec = { workspace = true }
codex-roles = { workspace = true }
aiciv-hooks = { workspace = true }

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Text processing
unicode-width = "0.2"
pulldown-cmark = "0.12"
