[package]
name = "codex-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool execution engine — where Cortex meets the filesystem."

[dependencies]
codex-roles = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
