[package]
name = "codex-fitness"
description = "Role-specific fitness scoring for the self-improving loop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codex-roles = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
