[package]
name = "codex-ipc"
description = "MCP-based inter-mind communication — each mind is an MCP server."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codex-roles = { workspace = true }
codex-exec = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
