[package]
name = "codex-memory"
description = "Memory IS Architecture — SQLite-backed memory graph with depth scoring and graph links"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codex-roles = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
