[package]
name = "codex-patcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal crates
codex-coordination = { path = "../codex-coordination" }
codex-llm = { path = "../codex-llm" }
codex-memory = { path = "../codex-memory" }
codex-redteam = { path = "../codex-redteam" }
codex-roles = { path = "../codex-roles" }
codex-fitness = { path = "../codex-fitness" }
codex-dream = { path = "../codex-dream" }

# External dependencies
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
patch = "0.7"
diffy = "0.4"
