[package]
name = "codex-redteam"
description = "Adversarial verification — Red Team Everything (Principle 9)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codex-roles = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = "1"
