[package]
name = "qwen-mind"
description = "Persistent AI mind — identity, memory, planning, delegation (Principles 1,3,5,8,11)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "qwen-mind"
path = "src/bin/main.rs"

[dependencies]
cortex-memory = { path = "../cortex-memory" }
codex-suite-client = { path = "../codex-suite-client" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
zmq = "0.10"
dotenvy = "0.15"
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
